<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/topButtonHorizontalPadding"
        android:paddingEnd="@dimen/topButtonHorizontalPadding"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/backButton"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="@dimen/topButtonsSize"
            android:layout_height="@dimen/topButtonsSize" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        android:text="@string/newRoomHeadingText"
        android:layout_marginTop="@dimen/headingTopMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headingTextSize"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/formContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/pagesHorizontalPadding"
        android:paddingEnd="@dimen/pagesHorizontalPadding"
        android:paddingBottom="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/addNewRoomNameLabel"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/roomName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/roboto_light"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/addNewRoomPresetLabel"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black" />

        </LinearLayout>

        <RelativeLayout
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:src="@drawable/chevron_left"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_width="@dimen/topButtonsSize"
                android:layout_height="wrap_content"
                android:id="@+id/prevPreset"
                android:layout_alignParentStart="true" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:src="@drawable/chevron_right"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:layout_width="@dimen/topButtonsSize"
                android:layout_height="wrap_content"
                android:id="@+id/nextPreset"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/brightnessContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/seekBarVerticalPadding"
            android:paddingBottom="@dimen/seekBarVerticalPadding"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clipToPadding="false">
            <SeekBar
                android:id="@+id/brightness"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatImageView
                android:scaleType="fitCenter"
                android:layout_width="@dimen/seekBarIconsSize"
                android:layout_height="@dimen/seekBarIconsSize"
                android:src="@drawable/bulb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/temperatureContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/seekBarVerticalPadding"
            android:paddingBottom="@dimen/seekBarVerticalPadding"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/brightnessContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clipToPadding="false">
            <SeekBar
                android:id="@+id/temperature"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.AppCompatImageView
                android:scaleType="fitCenter"
                android:layout_width="@dimen/seekBarIconsSize"
                android:layout_height="@dimen/seekBarIconsSize"
                android:src="@drawable/temperature" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/temperatureContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/sensorCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/checkboxLabel"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/sensor_checkbox_label"
                android:labelFor="@id/sensorCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_string"
            android:textColor="@color/white"
            android:layout_marginTop="37dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>